// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Initialises correctly with a single media group on comment 1`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "attrs": Object {
            "__contextId": "DUMMY-OBJECT-ID",
            "__displayType": null,
            "__external": false,
            "__fileMimeType": null,
            "__fileName": "example.png",
            "__fileSize": null,
            "alt": "",
            "collection": "jira-13085-field-description",
            "height": null,
            "id": "1234-5678-abcd-efgh",
            "occurrenceKey": "12345678-9abc-def0-1234-56789abcdef0",
            "type": "file",
            "url": null,
            "width": null,
          },
          "type": "media",
        },
      ],
      "type": "mediaGroup",
    },
    Object {
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`insert-mediaGroup.ts: Inserts a media group on comment 1`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "text": "some text",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
    Object {
      "content": Array [
        Object {
          "attrs": Object {
            "__contextId": "DUMMY-OBJECT-ID",
            "__displayType": null,
            "__external": false,
            "__fileMimeType": "image/jpeg",
            "__fileName": "example.png",
            "__fileSize": 756325,
            "alt": "",
            "collection": "MediaServicesSample",
            "height": null,
            "id": "1234-5678-abcd-efgh",
            "occurrenceKey": null,
            "type": "file",
            "url": null,
            "width": null,
          },
          "type": "media",
        },
      ],
      "type": "mediaGroup",
    },
    Object {
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`insert-mediaGroup.ts: Inserts multiple media group with non-image files 1`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "text": "some text",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
    Object {
      "content": Array [
        Object {
          "attrs": Object {
            "__contextId": "DUMMY-OBJECT-ID",
            "__displayType": null,
            "__external": false,
            "__fileMimeType": "application/vnd.ms-excel",
            "__fileName": "example.png",
            "__fileSize": 20480,
            "alt": "",
            "collection": "MediaServicesSample",
            "height": null,
            "id": "1234-5678-abcd-efgh",
            "occurrenceKey": null,
            "type": "file",
            "url": null,
            "width": null,
          },
          "type": "media",
        },
        Object {
          "attrs": Object {
            "__contextId": "DUMMY-OBJECT-ID",
            "__displayType": null,
            "__external": false,
            "__fileMimeType": "text/plain",
            "__fileName": "example.png",
            "__fileSize": 3541,
            "alt": "",
            "collection": "MediaServicesSample",
            "height": null,
            "id": "1234-5678-abcd-efgh",
            "occurrenceKey": null,
            "type": "file",
            "url": null,
            "width": null,
          },
          "type": "media",
        },
        Object {
          "attrs": Object {
            "__contextId": "DUMMY-OBJECT-ID",
            "__displayType": null,
            "__external": false,
            "__fileMimeType": "application/pdf",
            "__fileName": "example.png",
            "__fileSize": 469513,
            "alt": "",
            "collection": "MediaServicesSample",
            "height": null,
            "id": "1234-5678-abcd-efgh",
            "occurrenceKey": null,
            "type": "file",
            "url": null,
            "width": null,
          },
          "type": "media",
        },
      ],
      "type": "mediaGroup",
    },
    Object {
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`insert-mediaGroup.ts: Inserts one media group with non-image files 1`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "text": "some text",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
    Object {
      "content": Array [
        Object {
          "attrs": Object {
            "__contextId": "DUMMY-OBJECT-ID",
            "__displayType": null,
            "__external": false,
            "__fileMimeType": "application/pdf",
            "__fileName": "example.png",
            "__fileSize": 469513,
            "alt": "",
            "collection": "MediaServicesSample",
            "height": null,
            "id": "1234-5678-abcd-efgh",
            "occurrenceKey": null,
            "type": "file",
            "url": null,
            "width": null,
          },
          "type": "media",
        },
      ],
      "type": "mediaGroup",
    },
    Object {
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;
